tests/spec/non_conformant/errors/invalid_parent/mixin_in_while.rs
//! Tests auto-converted from "sass-spec/spec/non_conformant/errors/invalid-parent/mixin-in-while.hrx"

// Ignoring "test", error tests are not supported yet.
